compiler/testData/diagnostics/testsWithStdLib/coroutines/synchronizedSuspendFunction.kt
// SKIP_TXT

<!SYNCHRONIZED_ON_SUSPEND!>@Synchronized<!>
suspend fun foo() {}
